--- a/package.json
+++ b/package.json
@@ -10,16 +10,16 @@
   },
   "dependencies": {
     "bulma-carousel": "^3.0.0",
-    "cookie-parser": "~1.4.3",
-    "debug": "~2.6.9",
-    "express": "~4.16.0",
+    "cookie-parser": "^1.4.4",
+    "debug": "~4.1.1",
+    "express": "~4.16.4",
     "font-awesome": "^4.7.0",
     "hbs": "~4.0.1",
-    "http-errors": "~1.6.2",
+    "http-errors": "~1.7.1",
     "morgan": "~1.9.0"
   },
   "devDependencies": {
-    "bulma": "^0.7.2",
+    "bulma": "^0.7.4",
     "node-sass": "^4.11.0"
   }
 }
