--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cookie-parser": "^1.4.4",
     "debug": "~4.1.1",
     "express": "~4.16.4",
+    "express-validator": "^5.3.1",
     "font-awesome": "^4.7.0",
     "hbs": "~4.0.1",
     "http-errors": "~1.7.1",
