--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "express": "~4.16.4",
     "express-validator": "^5.3.1",
     "font-awesome": "^4.7.0",
-    "hbs": "~4.0.1",
-    "http-errors": "~1.7.1",
+    "hbs": "^4.0.3",
+    "http-errors": "^1.7.2",
     "morgan": "~1.9.0"
   },
   "devDependencies": {
